# layercake

./: .env.deploy  .env.example  .gitignore  Cargo.toml  LICENSE  README.md  foundry.toml  slither.md
.github/workflows/: layercake-unit-tests.yml
docs/: indexer.md  slither.md  tests.md  yellow-paper.md
migrations/indexer/: down.sql  up.sql
script/: build.sh  flatten.sh  slither.sh  test_deploy.sh  test_transfer.sh
script/src/: DestinationDeploy.s.sol  DestinationLayerCake.s.sol  OriginDeploy.s.sol  OriginLayerCake.s.sol  TransferDeposits.s.sol  TransportedTokenDeploy.s.sol
script/test/: TestDeposit.s.sol  TestDestinationAddBandwidth.s.sol  TestOriginAddBandwidth.s.sol  TestSetBalanceChanges.s.sol  TestTokenDeploy.s.sol  TestTransfer.s.sol  TestWithdraw.s.sol
src/: bandwidth_provider.rs  build.rs  lib.rs  models.rs  schema.rs
src/abigen-builder/ierc20/: Cargo.toml
src/core/: LayerCake.sol  LayerCakeBandwidthManager.sol  LayerCakeCalldataInterface.sol  LayerCakeDeployTools.sol  LayerCakeDestinationDeploy.sol  LayerCakeExecutionProof.sol  LayerCakeOriginDeploy.sol  LayerCakeStorageManager.sol  LayerCakeStorageSlot.sol  LayerCakeTools.sol  LayerCakeTransportedToken.sol
src/grafana/: Bandwidth-1689205103232.json
src/test/: BandwidthProviderController.sol  Counter.sol  LayerCakeBandwidthChangesTest.t.sol  LayerCakeNegationOperationsTest.t.sol  LayerCakeStandardOperationsTest.t.sol  LayerCakeVerifiedSetupTest.t.sol  NegationOperationsController.sol  StandardOperationsController.sol  TestWETH.sol  UserController.sol  VerifiedSetupController.sol
(+14 files in other folders)
